<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/Navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="39dip"
            android:layout_height="37dip"
            android:layout_marginEnd="60dip"
            android:background="@drawable/ic_home"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/searchButton2"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginEnd="60dip"
            android:layout_weight="0"
            android:background="@drawable/ic_search_black_24dp"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_weight="0"
            android:background="@drawable/ic_settings_black_24dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>


    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        style="@android:style/Widget.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabel">

        <LinearLayout
            android:id="@+id/settingsItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settingsAppearanceTitle"
                android:textAlignment="textStart"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/DarkModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/dark_mode"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="?android:attr/textColor"
                android:textSize="20sp" />

            <Button
                android:id="@+id/courseColorsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableEnd="@drawable/ic_forward_arrow"
                android:padding="15dp"
                android:text="@string/courseColorsText"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settingsGeneralTitle"
                android:textAlignment="textStart"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:drawableEnd="@drawable/ic_forward_arrow"
                android:padding="15dp"
                android:text="@string/FAQ"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>