<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/Navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_bar_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="39dip"
            android:layout_height="37dip"
            android:layout_gravity="center"
            android:layout_marginEnd="60dip"
            android:layout_marginBottom="1dip"
            android:background="@drawable/ic_home"
            android:backgroundTint="@color/colorPrimaryDark"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/searchButton2"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_marginEnd="60dip"
            android:layout_weight="0"
            android:background="@drawable/ic_search_black_24dp"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:layout_weight="0"
            android:background="@drawable/ic_settings_black_24dp"
            android:scaleType="fitCenter"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

    <TextView
        android:id="@+id/settingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/saved_course_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/savedCourses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/Navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLabel"
        tools:ignore="InvalidId">

        <LinearLayout
            android:id="@+id/savedCourseView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/noCoursesImage"
                android:layout_width="250dip"
                android:layout_height="220dip"
                android:layout_gravity="center"
                android:layout_marginTop="85dip"
                android:background="@drawable/no_courses_icon"
                android:contentDescription="@string/noCourseImageDescription"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/noCoursesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saved_course_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textSize="23sp"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/blurEffect"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="10"
        android:background="#80000000"
        android:contentDescription="@string/blurEffectDescription"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>